--- a/resources/styles.css
+++ b/resources/styles.css
@@ -14,40 +14,49 @@
 	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
 }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+/* bibtex modal boxes */
+[id^=bibkey] {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+[id^=bibkey]:target {
+    display: block;
 }
-
-/* The Close Button */
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+input[type=checkbox] {
+    position: absolute;
+    clip: rect(0 0 0 0);
 }
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+.popup {
+    width: 100%;
+    height: 100%;
+    z-index: 99999;
+}
+.popup__overlay {
+    position: fixed;
+    z-index: 1;
+    display: block;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #000000b3;
+}
+.popup__wrapper {
+    position: fixed;
+    z-index: 9;
+    width: 80%;
+    max-width: 1200px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 8px;
+    padding: 58px 32px 32px 32px;
+    background: #fff;
+}
+.popup__close {
+    position: absolute;
+    top: 16px;
+    right: 26px;
 }
