--- a/resources/styles.css
+++ b/resources/styles.css
@@ -21,42 +21,42 @@
     top: 0;
     left: 0;
 }
-[id^=bibkey]:target {
-    display: block;
+
+/* The Modal (background) */
+[id~=modal] {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
-input[type=checkbox] {
-    position: absolute;
-    clip: rect(0 0 0 0);
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
 }
-.popup {
-    width: 100%;
-    height: 100%;
-    z-index: 99999;
+
+/* The Close Button */
+[id^=closeModal] {
+  color: #aaaaaa;
+  text-align: right;
+  font-size: 28px;
+  font-weight: bold;
 }
-.popup__overlay {
-    position: fixed;
-    z-index: 1;
-    display: block;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: #000000b3;
-}
-.popup__wrapper {
-    position: fixed;
-    z-index: 9;
-    width: 80%;
-    max-width: 1200px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 8px;
-    padding: 58px 32px 32px 32px;
-    background: #fff;
-}
-.popup__close {
-    position: absolute;
-    top: 16px;
-    right: 26px;
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
